# directxmathtest

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/: copilot-instructions.md
VerifyRounding/: MyXMVectorSinCos.h  VerifyRounding.cpp  VerifyRounding.sln  VerifyRounding.vcxproj  _Result_fp_fast.txt  _Result_fp_precise.txt
cpuid/: cpuid.cpp
ext/: build.cmd  testavx.cpp  testavx2.cpp  testbe.cpp  testf16c.cpp  testfma3.cpp  testfma4.cpp  testsse3.cpp  testsse4.cpp
headertest/: CMakeLists.txt  CMakePresets.json  collision.cpp  colors.cpp  core.cpp  main.cpp  packed.cpp
math3/: box.cpp  build.cmd  clangcompat.cpp  constexpr.cpp  cpp17compat.cpp  cpp20compat.cpp  cpp20tests.cpp  favorinteltest.cpp  frustum.cpp  hdrtest.cpp  math3.cpp  math3.h  math3_2013.sln  math3_2013.vcxproj  math3_2013.vcxproj.filters  math3_2015.sln  math3_2015.vcxproj  math3_2015.vcxproj.filters  math3_2017.sln  math3_2017.vcxproj  math3_2017.vcxproj.filters  math3_2019.sln  math3_2019.vcxproj  math3_2019.vcxproj.filters  math3_2022.sln  math3_2022.vcxproj  math3_2022.vcxproj.filters  math3tests.cpp  nomovnttest.cpp  obox.cpp  permissive.cpp  r12.cmd  r14.cmd  r15.cmd  r16.cmd  r17.cmd  shared.cpp  sphere.cpp  triangle.cpp  xmcolor.cpp  (+4 more)
shmath/: DDSTextureLoader.cpp  DDSTextureLoader.h  DDSTextureLoader11.cpp  DDSTextureLoader11.h  DDSTextureLoader12.cpp  DDSTextureLoader12.h  coeff.cpp  d3dx12.h  shmath_12.sln  shmath_12.vcxproj  shmath_14.sln  shmath_14.vcxproj  shmath_14.vcxproj.filters  shmath_2015.sln  shmath_2015.vcxproj  shmath_2017.sln  shmath_2017.vcxproj  shmath_2017.vcxproj.filters  shmath_2019.sln  shmath_2019.vcxproj  shmath_2019.vcxproj.filters  shmath_2022.sln  shmath_2022.vcxproj  test.cpp
stacktest/: main.cpp
xdsp/: Test.cpp  XDSPTest_2013.sln  XDSPTest_2013.vcxproj  XDSPTest_2013.vcxproj.filters  XDSPTest_2015.sln  XDSPTest_2015.vcxproj  XDSPTest_2017.sln  XDSPTest_2017.vcxproj  XDSPTest_2017.vcxproj.filters  XDSPTest_2019.sln  XDSPTest_2019.vcxproj  XDSPTest_2019.vcxproj.filters  XDSPTest_2022.sln  XDSPTest_2022.vcxproj
